--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mgrs": "^2.1.0",
     "proj4": "^2.20.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
