feat: Phase 1 GZD grid layer with mgrs-js

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@deck.gl/geo-layers": "9.2.6",
     "@deck.gl/layers": "9.2.6",
     "@deck.gl/react": "9.2.6",
+    "@ngageoint/grid-js": "^2.1.0",
+    "@ngageoint/mgrs-js": "^1.0.0",
     "deck.gl": "9.2.6",
+    "js_cols": "^1.0.1",
     "jsts": "^2.12.1",
-    "mgrs": "^2.1.0",
     "proj4": "^2.20.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -26,7 +28,6 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
-    "@types/proj4": "^2.19.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
