--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@deck.gl/geo-layers": "9.2.6",
     "@deck.gl/layers": "9.2.6",
     "@deck.gl/react": "9.2.6",
+    "@ngageoint/grid-js": "^2.1.0",
+    "@ngageoint/mgrs-js": "^1.0.0",
     "deck.gl": "9.2.6",
     "jsts": "^2.12.1",
-    "mgrs": "^2.1.0",
     "proj4": "^2.20.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
